<resources>
    <string name="app_name">Coffee News Focus</string>

    <string name="news">新闻</string>
        <string name="all">全部</string>
        <string name="paper">论文</string>
    <string name="passaway_scholar">追忆学者</string>
    <string name="all_scholar">全部学者</string>
    <string name="high_scholar">高关注度学者</string>
    <string name="data">数据</string>
    <string name="scholar">知疫学者</string>
        <string name="scholar_bio">生平经历</string>
        <string name="scholar_edu">教育背景</string>
        <string name="scholar_work">工作经历</string>
        <string name="scholar_homepage">个人主页</string>
        <string name="scholar_affiliation">所属单位</string>
        <string name="passaway">已故</string>

    <string name="epidemic_data">疫情数据</string>
        <string name="input_country">请选择国家</string>
        <string name="input_province">请选择省份</string>
        <string name="input_city">请选择城市</string>
        <string name="epidemic_checkHit">展示所选地区近14日数据(累计值)</string>
        <string name="confirmed_sum">确诊人数</string>
        <string name="cured_sum">治愈人数</string>
        <string name="dead_sum">死亡人数</string>


    <string name="epidemic_map">疫情图谱</string>

    <string name="news_clustering">新闻聚类</string>
        <string name="medicine">药物</string>
        <string name="scientific">科学发现</string>
        <string name="virus">防控与病毒</string>
        <string name="treat">治疗与药物</string>
        <string name="theory">病理与机理</string>
        <string name="spread">防控与传播</string>

    <string name="news_details">新闻正文</string>

    <string name="share">分享</string>
    <string name="search">搜索</string>
    <string name="searchHint">请输入搜索关键词</string>
    <string name="check">查询</string>

    <string name="title_activity_option">增删分类列表</string>


</resources>