<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinner_country"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:hint="@string/input_country"/>

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinner_province"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="50dp"
        android:hint="@string/input_province"/>

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinner_city"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="50dp"
        android:hint="@string/input_city"/>

    <Button
        android:id="@+id/button_check"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="100dp"
        android:text="@string/check" />

</RelativeLayout>