<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.data.DataFragment"
    android:layout_gravity="start">

    <LinearLayout
        android:id="@+id/dataTable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dataRalevent_tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/epidemic_data"/>

            <com.google.android.material.tabs.TabItem
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/epidemic_map"/>

            <com.google.android.material.tabs.TabItem
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/news_clustering"/>

        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dataTable_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="start"/>

</androidx.constraintlayout.widget.ConstraintLayout>